--- a/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/Rx-application-main.fxml
+++ b/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/Rx-application-main.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -29,136 +30,158 @@
                   <Button fx:id="rffButton" alignment="CENTER_RIGHT" mnemonicParsing="false" prefHeight="58.0" prefWidth="150.0" styleClass="navBarButton" text="Load" textAlignment="RIGHT" />
                </children>
             </VBox>
-            <Button mnemonicParsing="false" onAction="#loadMainScreen" prefHeight="66.0" prefWidth="105.0 " style="-fx-background-color: #1f2a44;">
-               <graphic>
-                  <ImageView fitHeight="65.0" fitWidth="123.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/logo.png" />
-                     </image>
-                  </ImageView>
-               </graphic></Button>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="lastraceSection" layoutX="221.0" layoutY="132.0" prefHeight="179.0" prefWidth="821.0" style="-fx-background-color: #e9e9e9;">
-         <children>
-            <VBox layoutX="364.0" layoutY="14.0" prefHeight="138.0" prefWidth="446.0" style="-fx-background-color: f1f2f5;">
+      <ScrollPane hbarPolicy="NEVER" hmax="0.0" layoutX="148.0" layoutY="-1.0" prefHeight="680.0" prefWidth="911.0" vbarPolicy="ALWAYS">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1219.0" prefWidth="911.0">
                <children>
-                  <HBox prefHeight="33.0" prefWidth="397.0" style="-fx-background-color: #d3d3d3;">
+                  <AnchorPane layoutX="62.0" layoutY="388.0" prefHeight="239.0" prefWidth="367.0" />
+                  <AnchorPane layoutX="62.0" layoutY="388.0" prefHeight="239.0" prefWidth="179.0" style="-fx-background-color: EEEEEE;" />
+                  <AnchorPane layoutX="62.0" layoutY="388.0" prefHeight="239.0" prefWidth="192.0" style="-fx-background-color: E9E9E9;" />
+                  <AnchorPane fx:id="lastraceSection" layoutX="58.0" layoutY="84.0" prefHeight="179.0" prefWidth="821.0" style="-fx-background-color: #e9e9e9;">
                      <children>
-                        <Label prefHeight="33.0" prefWidth="78.0" text=" POSITION">
+                        <VBox layoutX="364.0" layoutY="14.0" prefHeight="138.0" prefWidth="446.0" style="-fx-background-color: f1f2f5;">
+                           <children>
+                              <HBox prefHeight="33.0" prefWidth="397.0" style="-fx-background-color: #d3d3d3;">
+                                 <children>
+                                    <Label prefHeight="33.0" prefWidth="78.0" text=" POSITION">
+                                       <font>
+                                          <Font name="System Bold" size="13.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="229.0" text="NAME">
+                                       <font>
+                                          <Font name="System Bold" size="13.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="70.0" text="CAR">
+                                       <font>
+                                          <Font name="System Bold" size="13.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="55.0" text="POINTS">
+                                       <font>
+                                          <Font name="System Bold" size="13.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="397.0" style="-fx-background-color: f1f2f5;">
+                                 <children>
+                                    <Label fx:id="lrhPos1Label" alignment="CENTER" prefHeight="33.0" prefWidth="70.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="lrhName1Label" layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="179.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="lrhCar1Label" layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="125.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="lrhPoints1Label" alignment="CENTER_RIGHT" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="52.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="397.0" style="-fx-background-color: f1f2f5;">
+                                 <children>
+                                    <Label fx:id="lrhPos2Label" alignment="CENTER" prefHeight="33.0" prefWidth="70.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="lrhName2Label" layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="179.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="lrhCar2Label" layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="125.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="lrhPoints2Label" alignment="CENTER_RIGHT" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="52.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="397.0" style="-fx-background-color: f1f2f5;">
+                                 <children>
+                                    <Label fx:id="lrhPos3Label" alignment="CENTER" prefHeight="33.0" prefWidth="70.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="lrhName3Label" layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="179.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="lrhCar3Label" layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="125.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="lrhPoints3Label" alignment="CENTER_RIGHT" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="52.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <Label fx:id="lrhLocationLabel" layoutX="3.0" layoutY="7.0" prefHeight="83.0" prefWidth="361.0">
                            <font>
-                              <Font name="System Bold" size="13.0" />
+                              <Font name="System Bold" size="56.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="229.0" text="NAME">
+                        <Label fx:id="lrhDateLabel" layoutX="17.0" layoutY="84.0" prefHeight="52.0" prefWidth="333.0">
                            <font>
-                              <Font name="System Bold" size="13.0" />
+                              <Font size="34.0" />
                            </font>
                         </Label>
-                        <Label layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="70.0" text="CAR">
+                        <Button layoutX="364.0" layoutY="153.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="446.0" style="-fx-background-color: #e9e9e9;" text="View the entire race date here" />
+                        <Label fx:id="lrhLocationLabel1" layoutX="13.0" layoutY="17.0" prefHeight="83.0" prefWidth="361.0">
                            <font>
-                              <Font name="System Bold" size="13.0" />
-                           </font>
-                        </Label>
-                        <Label alignment="CENTER" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="55.0" text="POINTS">
-                           <font>
-                              <Font name="System Bold" size="13.0" />
+                              <Font name="System Bold" size="56.0" />
                            </font>
                         </Label>
                      </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="397.0" style="-fx-background-color: f1f2f5;">
-                     <children>
-                        <Label fx:id="lrhPos1Label" alignment="CENTER" prefHeight="33.0" prefWidth="70.0">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="lrhName1Label" layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="179.0">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="lrhCar1Label" layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="125.0">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="lrhPoints1Label" alignment="CENTER_RIGHT" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="52.0">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="397.0" style="-fx-background-color: f1f2f5;">
-                     <children>
-                        <Label fx:id="lrhPos2Label" alignment="CENTER" prefHeight="33.0" prefWidth="70.0">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="lrhName2Label" layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="179.0">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="lrhCar2Label" layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="125.0">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="lrhPoints2Label" alignment="CENTER_RIGHT" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="52.0">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="397.0" style="-fx-background-color: f1f2f5;">
-                     <children>
-                        <Label fx:id="lrhPos3Label" alignment="CENTER" prefHeight="33.0" prefWidth="70.0">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="lrhName3Label" layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="179.0">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="lrhCar3Label" layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="125.0">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="lrhPoints3Label" alignment="CENTER_RIGHT" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="52.0">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
+                  </AnchorPane>
+                  <Label layoutX="58.0" layoutY="39.0" prefHeight="33.0" prefWidth="374.0" text="LAST RACE HIGHLIGHTS" textFill="#1f2a44">
+                     <font>
+                        <Font name="System Bold" size="22.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="58.0" layoutY="316.0" prefHeight="33.0" prefWidth="374.0" text="TITLE RACE" textFill="#1f2a44">
+                     <font>
+                        <Font name="System Bold" size="22.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="refreshButton" layoutX="-18.0" layoutY="-2.0" mnemonicParsing="false" onAction="#loadRastRaceData" opacity="0.79" prefHeight="683.0" prefWidth="916.0" text="Click here to access live updates. Refresh the page now" />
                </children>
-            </VBox>
-            <Label fx:id="lrhLocationLabel" layoutX="3.0" layoutY="7.0" prefHeight="83.0" prefWidth="361.0">
-               <font>
-                  <Font name="System Bold" size="56.0" />
-               </font>
-            </Label>
-            <Label fx:id="lrhDateLabel" alignment="CENTER_RIGHT" layoutX="17.0" layoutY="84.0" prefHeight="52.0" prefWidth="333.0">
-               <font>
-                  <Font size="34.0" />
-               </font>
-            </Label>
-            <Button layoutX="364.0" layoutY="153.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="446.0" style="-fx-background-color: #e9e9e9;" text="View the entire race date here" />
-         </children>
-      </AnchorPane>
-      <Label layoutX="221.0" layoutY="99.0" prefHeight="33.0" prefWidth="374.0" text="LAST RACE HIGHLIGHTS" textFill="#1f2a44">
-         <font>
-            <Font name="System Bold" size="22.0" />
-         </font>
-      </Label>
-      <Button fx:id="refreshButton" layoutX="144.0" mnemonicParsing="false" onAction="#loadRastRaceData" opacity="0.67" prefHeight="680.0" prefWidth="907.0" text="Click here to access live updates. Refresh the page now" />
+            </AnchorPane>
+        </content>
+      </ScrollPane>
+      <Button mnemonicParsing="false" onAction="#loadMainScreen" prefHeight="66.0" prefWidth="105.0 " style="-fx-background-color: #1f2a44;">
+         <graphic>
+            <ImageView fitHeight="65.0" fitWidth="123.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/logo.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
