--- a/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/Rx-application-main.fxml
+++ b/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/Rx-application-main.fxml
@@ -32,13 +32,37 @@
             </VBox>
          </children>
       </AnchorPane>
-      <ScrollPane hbarPolicy="NEVER" hmax="0.0" layoutX="148.0" layoutY="-1.0" prefHeight="680.0" prefWidth="911.0" vbarPolicy="ALWAYS">
+      <ScrollPane hbarPolicy="NEVER" hmax="0.0" layoutX="143.0" layoutY="-1.0" prefHeight="680.0" prefWidth="916.0" vbarPolicy="ALWAYS">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1219.0" prefWidth="911.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1219.0" prefWidth="924.0">
                <children>
-                  <AnchorPane layoutX="62.0" layoutY="388.0" prefHeight="239.0" prefWidth="367.0" />
-                  <AnchorPane layoutX="62.0" layoutY="388.0" prefHeight="239.0" prefWidth="179.0" style="-fx-background-color: EEEEEE;" />
-                  <AnchorPane layoutX="62.0" layoutY="388.0" prefHeight="239.0" prefWidth="192.0" style="-fx-background-color: E9E9E9;" />
+                  <AnchorPane layoutX="62.0" layoutY="387.0" prefHeight="234.0" prefWidth="449.0" style="-fx-background-color: ffffff;">
+                     <children>
+                        <Label fx:id="firstPlaceDriverFname" alignment="CENTER" layoutX="32.0" prefHeight="63.0" prefWidth="155.0" text="FIRSTNAME">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="firstPlaceDriverLname" alignment="CENTER" layoutX="7.0" layoutY="24.0" prefHeight="63.0" prefWidth="212.0" text="LASTNAME">
+                           <font>
+                              <Font name="System Bold" size="23.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="62.0" layoutY="388.0" prefHeight="239.0" prefWidth="450.0">
+                     <children>
+                        <Label fx:id="secondPlaceDriverFname" alignment="CENTER" layoutX="266.0" prefHeight="63.0" prefWidth="132.0" text="FIRSTNAME">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="secondPlaceDriverLname" alignment="CENTER" layoutX="224.0" layoutY="23.0" prefHeight="63.0" prefWidth="215.0" text="LASTNAME">
+                           <font>
+                              <Font name="System Bold" size="23.0" />
+                           </font>
+                        </Label>
+                     </children></AnchorPane>
                   <AnchorPane fx:id="lastraceSection" layoutX="58.0" layoutY="84.0" prefHeight="179.0" prefWidth="821.0" style="-fx-background-color: #e9e9e9;">
                      <children>
                         <VBox layoutX="364.0" layoutY="14.0" prefHeight="138.0" prefWidth="446.0" style="-fx-background-color: f1f2f5;">
@@ -50,17 +74,17 @@
                                           <Font name="System Bold" size="13.0" />
                                        </font>
                                     </Label>
-                                    <Label layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="229.0" text="NAME">
+                                    <Label layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="175.0" text="NAME">
                                        <font>
                                           <Font name="System Bold" size="13.0" />
                                        </font>
                                     </Label>
-                                    <Label layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="70.0" text="CAR">
+                                    <Label layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="141.0" text="CAR">
                                        <font>
                                           <Font name="System Bold" size="13.0" />
                                        </font>
                                     </Label>
-                                    <Label alignment="CENTER" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="55.0" text="POINTS">
+                                    <Label alignment="CENTER" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="75.0" text="POINTS">
                                        <font>
                                           <Font name="System Bold" size="13.0" />
                                        </font>
@@ -76,7 +100,7 @@
                                     </Label>
                                     <Label fx:id="lrhName1Label" layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="179.0">
                                        <font>
-                                          <Font size="15.0" />
+                                          <Font name="System Bold" size="15.0" />
                                        </font>
                                     </Label>
                                     <Label fx:id="lrhCar1Label" layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="125.0">
@@ -93,22 +117,22 @@
                               </HBox>
                               <HBox layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="397.0" style="-fx-background-color: f1f2f5;">
                                  <children>
-                                    <Label fx:id="lrhPos2Label" alignment="CENTER" prefHeight="33.0" prefWidth="70.0">
+                                    <Label fx:id="lrhPos2Label" alignment="CENTER" prefHeight="33.0" prefWidth="70.0" textFill="#000000e6">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="lrhName2Label" layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="179.0">
+                                    <Label fx:id="lrhName2Label" layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="179.0" textFill="#000000e6">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="lrhCar2Label" layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="125.0">
+                                    <Label fx:id="lrhCar2Label" layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="125.0" textFill="#000000e6">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="lrhPoints2Label" alignment="CENTER_RIGHT" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="52.0">
+                                    <Label fx:id="lrhPoints2Label" alignment="CENTER_RIGHT" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="52.0" textFill="#000000e6">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -117,22 +141,22 @@
                               </HBox>
                               <HBox layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="397.0" style="-fx-background-color: f1f2f5;">
                                  <children>
-                                    <Label fx:id="lrhPos3Label" alignment="CENTER" prefHeight="33.0" prefWidth="70.0">
+                                    <Label fx:id="lrhPos3Label" alignment="CENTER" prefHeight="33.0" prefWidth="70.0" textFill="#000000e6">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="lrhName3Label" layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="179.0">
+                                    <Label fx:id="lrhName3Label" layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="179.0" textFill="#000000e6">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="lrhCar3Label" layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="125.0">
+                                    <Label fx:id="lrhCar3Label" layoutX="74.0" layoutY="10.0" prefHeight="33.0" prefWidth="125.0" textFill="#000000e6">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="lrhPoints3Label" alignment="CENTER_RIGHT" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="52.0">
+                                    <Label fx:id="lrhPoints3Label" alignment="CENTER_RIGHT" layoutX="239.0" layoutY="10.0" prefHeight="33.0" prefWidth="52.0" textFill="#000000e6">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -146,37 +170,99 @@
                               <Font name="System Bold" size="56.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lrhDateLabel" layoutX="17.0" layoutY="84.0" prefHeight="52.0" prefWidth="333.0">
+                        <Label fx:id="lrhDateLabel" layoutX="3.0" layoutY="90.0" prefHeight="52.0" prefWidth="333.0">
                            <font>
                               <Font size="34.0" />
                            </font>
                         </Label>
                         <Button layoutX="364.0" layoutY="153.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="446.0" style="-fx-background-color: #e9e9e9;" text="View the entire race date here" />
-                        <Label fx:id="lrhLocationLabel1" layoutX="13.0" layoutY="17.0" prefHeight="83.0" prefWidth="361.0">
+                        <Label fx:id="lrhLocationLabel1" layoutX="3.0" layoutY="14.0" prefHeight="83.0" prefWidth="361.0">
                            <font>
-                              <Font name="System Bold" size="56.0" />
+                              <Font size="56.0" />
                            </font>
                         </Label>
                      </children>
                   </AnchorPane>
-                  <Label layoutX="58.0" layoutY="39.0" prefHeight="33.0" prefWidth="374.0" text="LAST RACE HIGHLIGHTS" textFill="#1f2a44">
+                  <Label layoutX="58.0" layoutY="21.0" prefHeight="62.0" prefWidth="410.0" text="LAST RACE HIGHLIGHTS" textFill="#1f2a44">
                      <font>
-                        <Font name="System Bold" size="22.0" />
+                        <Font name="System Bold" size="32.0" />
                      </font>
                   </Label>
-                  <Label layoutX="58.0" layoutY="316.0" prefHeight="33.0" prefWidth="374.0" text="TITLE RACE" textFill="#1f2a44">
+                  <AnchorPane layoutX="102.0" layoutY="352.0" prefHeight="316.0" prefWidth="359.0">
+                     <children>
+                        <Label alignment="CENTER" layoutX="144.0" layoutY="182.0" prefHeight="35.0" prefWidth="78.0" text="WINS">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label alignment="CENTER" layoutX="117.0" layoutY="217.0" prefHeight="35.0" prefWidth="132.0" text="TOP3 FINISHES">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label alignment="CENTER" layoutX="144.0" layoutY="138.0" prefHeight="34.0" prefWidth="78.0" text="POSITION" textFill="#1f2a44">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="-43.0" layoutY="-34.0" prefHeight="67.0" prefWidth="374.0" text="TITLE RACE" textFill="#1f2a44">
+                           <font>
+                              <Font name="System Bold" size="31.0" />
+                           </font>
+                        </Label>
+                        <Label alignment="CENTER" layoutX="31.0" layoutY="129.0" prefHeight="52.0" prefWidth="78.0" text="1" textFill="#1f2a44">
+                           <font>
+                              <Font name="System Bold" size="23.0" />
+                           </font>
+                        </Label>
+                        <Label alignment="CENTER" layoutX="261.0" layoutY="127.0" prefHeight="52.0" prefWidth="78.0" text="2" textFill="#1f2a44">
+                           <font>
+                              <Font name="System Bold" size="23.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="firstPlaceDriverWins" alignment="CENTER" layoutX="31.0" layoutY="182.0" prefHeight="35.0" prefWidth="78.0" text="0" textFill="#1f2a44">
+                           <font>
+                              <Font size="21.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="secondPlaceDriverWins" alignment="CENTER" layoutX="261.0" layoutY="182.0" prefHeight="35.0" prefWidth="78.0" text="0" textFill="#1f2a44">
+                           <font>
+                              <Font size="21.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="firstPlaceDriverTop3" alignment="CENTER" layoutX="31.0" layoutY="217.0" prefHeight="35.0" prefWidth="78.0" text="0" textFill="#1f2a44">
+                           <font>
+                              <Font size="21.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="secondPlaceDriverTop3" alignment="CENTER" layoutX="261.0" layoutY="217.0" prefHeight="35.0" prefWidth="78.0" text="0" textFill="#1f2a44">
+                           <font>
+                              <Font size="21.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="539.0" layoutY="285.0" prefHeight="223.0" prefWidth="352.0">
+                     <children>
+                        <ImageView fitHeight="241.0" fitWidth="353.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/1001743.jpg" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </AnchorPane>
+                  <Button fx:id="refreshButton" layoutX="-1.0" mnemonicParsing="false" onAction="#loadRastRaceData" opacity="0.79" prefHeight="683.0" prefWidth="916.0" text="Click here to access live updates. Refresh the page now" wrapText="true">
                      <font>
-                        <Font name="System Bold" size="22.0" />
+                        <Font name="System Bold" size="16.0" />
                      </font>
-                  </Label>
-                  <Button fx:id="refreshButton" layoutX="-18.0" layoutY="-2.0" mnemonicParsing="false" onAction="#loadRastRaceData" opacity="0.79" prefHeight="683.0" prefWidth="916.0" text="Click here to access live updates. Refresh the page now" />
+                  </Button>
                </children>
             </AnchorPane>
         </content>
       </ScrollPane>
       <Button mnemonicParsing="false" onAction="#loadMainScreen" prefHeight="66.0" prefWidth="105.0 " style="-fx-background-color: #1f2a44;">
          <graphic>
-            <ImageView fitHeight="65.0" fitWidth="123.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="65.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/logo.png" />
                </image>
