SRR and VRL Design needs to be implemented. Need to design the SRR and VRL Fxml files, Backend is complete.

--- a/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/Rx-application-SRR-view.fxml
+++ b/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/Rx-application-SRR-view.fxml
@@ -37,7 +37,7 @@
                 </graphic></Button>
         </children>
     </AnchorPane>
-   <Button fx:id="simulateRaceButtonClicked" layoutX="435.0" layoutY="354.0" mnemonicParsing="false" onAction="#startSimulationClicked" prefHeight="60.0" prefWidth="253.0" styleClass="navBarButton" stylesheets="@mainstylesheet.css" text="Start Simulation">
+   <Button fx:id="simulateRaceButtonClicked" layoutX="435.0" layoutY="354.0" mnemonicParsing="false" onAction="#startSimulationClicked" opacity="0.0" prefHeight="60.0" prefWidth="253.0" styleClass="navBarButton" stylesheets="@mainstylesheet.css" text="Start Simulation">
       <font>
          <Font size="28.0" />
       </font>
@@ -47,4 +47,24 @@
          <Font size="16.0" />
       </font>
    </Label>
+   <AnchorPane fx:id="raceInfoPane" layoutX="596.0" layoutY="121.0" prefHeight="464.0" prefWidth="435.0" style="-fx-background-color: D8D3CC;">
+      <children>
+         <ImageView fx:id="raceLocationFlag" fitHeight="268.0" fitWidth="406.0" layoutX="15.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../images/holjesFlag.png" />
+            </image>
+         </ImageView>
+         <Label fx:id="raceLocationLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="282.0" prefHeight="83.0" prefWidth="406.0">
+            <font>
+               <Font name="System Bold" size="48.0" />
+            </font>
+         </Label>
+         <Label fx:id="raceDateLabel" alignment="CENTER" layoutX="52.0" layoutY="366.0" prefHeight="52.0" prefWidth="333.0">
+            <font>
+               <Font size="34.0" />
+            </font>
+         </Label>
+      </children>
+   </AnchorPane>
+   <Label layoutX="157.0" layoutY="75.0" prefHeight="36.0" prefWidth="388.0" text="Initialising Data" />
 </AnchorPane>
