--- a/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/signIn-view.fxml
+++ b/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/signIn-view.fxml
@@ -17,7 +17,7 @@
          </image>
       </ImageView>
       <TextField fx:id="emailInput" layoutX="66.0" layoutY="277.0" prefHeight="41.0" prefWidth="361.0" promptText="Enter Email" style="-fx-background-color: #707070; -fx-border-radius: 20;  -fx-text-inner-color: #dedcdc;" />
-      <PasswordField fx:id="passwordInput" layoutX="66.0" layoutY="386.0" prefHeight="41.0" prefWidth="361.0" promptText="Enter Password" style="-fx-background-color: #707070; -fx-border-radius: 20px;-fx-text-inner-color: #dedcdc;" />
+      <PasswordField fx:id="passwordInput" layoutX="66.0" layoutY="386.0" prefHeight="41.0" prefWidth="361.0" promptText="Enter Password" style="-fx-background-color: #707070; -fx-border-radius: 20px;-fx-text-inner-color: #dedcdc;-fx-font-size:1.0em" />
       <Label layoutX="68.0" layoutY="254.0" prefHeight="17.0" prefWidth="50.0" text="EMAIL" textFill="#bfbfbf">
          <font>
             <Font name="Futura Medium" size="13.0" />
